--- a/produkt.html
+++ b/produkt.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eshop</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lightgallery.min.css" rel="stylesheet">
   </head>
@@ -41,53 +42,93 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Podpora</a>
               </li>
+              <li class="nav-item dropdown-custom">
+                <a class="navbar-brand dropdown-toggle-custom" href="#" id="shoppingCartDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img class="cart" src="imgs/cart.svg" alt="" height="30" width="30">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shoppingCartDropdown">
+                  <!-- Product Template 1 -->
+                  <li class="dropdown-item d-flex justify-content-between align-items-center">
+                    <div>
+                      <h6 class="mb-0">TUF Gaming K3 Gen II</h6>
+                      <small class="text-muted">€100,00</small>
+                    </div>
+                    <img src="imgs/img13.webp" alt="Product 1" class="img-thumbnail" style="width: 50px; height: 50px;">
+                  </li>
+                  <li><hr class="dropdown-divider"></li>
+                  <!-- Product Template 2 -->
+                  <li class="dropdown-item d-flex justify-content-between align-items-center">
+                    <div>
+                      <h6 class="mb-0">ROG Azoth Extreme</h6>
+                      <small class="text-muted">€400,00</small>
+                    </div>
+                    <img src="imgs/img1.webp" alt="Product 2" class="img-thumbnail" style="width: 50px; height: 50px;">
+                  </li>
+                  <li><hr class="dropdown-divider"></li>
+                  <!-- Checkout Button -->
+                  <li class="dropdown-item text-center">
+                    <button class="btn btn-primary btn-sm w-100">Zaplatit</button>
+                  </li>
+                </ul>
+              </li>
             </ul>
         </div>
       </div>
     </nav>
     <div class="container my-5">
-        <h1 class="text-center mb-4">ROG Claymore II</h1>
-        <div class="text-center">
-            <img src="image.png" alt="ROG Claymore II" class="img-fluid mb-4">
-        </div>
         <div class="row">
-            <div class="col-md-6">
-                <ul>
-                    <li><strong>Hrajte podle svého:</strong> Odnímatelný numpad lze připojit z obou stran 80% klávesnice.</li>
-                    <li><strong>Optické mechanické spínače ROG RX:</strong> Poskytují téměř nulovou zpoždění odezvy.</li>
-                    <li><strong>Připojení bez zpoždění:</strong> Ultranízká odezva 1 ms v kabelovém i bezdrátovém režimu.</li>
-                    <li><strong>Vynikající výdrž baterie:</strong> Až 43 hodin provozu při plně zapnutém osvětlení.</li>
-                    <li><strong>Rychlé nabíjení přes USB port:</strong> Snadné a rychlé nabíjení přes USB-C nebo USB-A.</li>
+            <div class="col-lg-7 text-center">
+                <img src="imgs/claymain.png" alt="ROG Claymore II" class="main-thumbnail">
+                <div id="lightgallery" class="gallery-thumbnails">
+                    <a href="imgs/clay1.png" data-src="imgs/clay1.png">
+                        <img src="imgs/clay1.png" alt="Gallery Image 1">
+                    </a>
+                    <a href="imgs/clay2.png" data-src="imgs/clay2.png">
+                        <img src="imgs/clay2.png" alt="Gallery Image 2">
+                    </a>
+                    <a href="imgs/clay3.png" data-src="imgs/clay3.png">
+                        <img src="imgs/clay3.png" alt="Gallery Image 3">
+                    </a>
+                    <a href="imgs/clay4.png" data-src="imgs/clay4.png">
+                        <img src="imgs/clay4.png" alt="Gallery Image 4">
+                    </a>
+                    <a href="imgs/clay5.png" data-src="imgs/clay5.png">
+                        <img src="imgs/clay5.png" alt="Gallery Image 5">
+                    </a>
+                    <a href="imgs/clay6.png" data-src="imgs/clay6.png">
+                        <img src="imgs/clay6.png" alt="Gallery Image 6">
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <h1 class="mb-4">ROG Claymore II</h1>
+                <p class="features">Modulární herní mechanická klávesnice ROG Claymore II TKL 80%/100% s optickými mechanickými spínači ROG RX, odnímatelnou numerickou klávesnicí a opěrkou zápěstí, drátovým a bezdrátovým režimem 2.4G, extra programovatelnými klávesami, válečkem pro ovládání hlasitosti a bezdrátovou technologií Aura Sync.</p>
+                <div class="d-flex cena">
+                    <h2>4455Kč</h2>
+                    <label for="PocetKusu">Počet kusů</label>
+                    <input class=" pocet" type="text" placeholder="1">
+                    <button type="button" class="koupit btn btn-primary btn-lg text-center">Přidat do košíku</button>
+                </div>
+                <ul class="features">
+                    <li><strong>Hrajte podle svého:</strong> Odnímatelný numpad lze připojit z obou stran 80% klávesnice, aby vyhovoval vašim osobním herním stylům a nastavením.</li>
+                    <li><strong>Optické mechanické spínače ROG RX:</strong> Spínače RX Red a RX Blue jsou vybaveny centrálním osvětlením a poskytují konzistentní stisk kláves bez viklání s téměř nulovým zpožděním odezvy.</li>
+                    <li><strong>Připojení bez zpoždění:</strong> ultrarychlá odezva 1 ms v kabelovém i bezdrátovém režimu 2,4 GHz.</li>
+                    <li><strong>Vynikající výdrž baterie:</strong> baterie s kapacitou 4000 mAh garantuje až 43 hodin provozu (v plné velikosti se zapnutým osvětlením) a klávesnice má zabudovaný LED indikátor stavu baterie.</li>
+                    <li><strong>Rychlé nabíjení přes USB port:</strong> snadné přepínání mezi rychlým nabíjením přes USB-C a klasickým připojením přes USB-A.</li>
+                    <li><strong>Intuitivní ovládání:</strong> Čtyři plně přizpůsobitelné rychlé klávesy a integrovaný váleček pro ovládání hlasitosti na numerické klávesnici.</li>
+                    <li><strong>Bezdrátová funkce Aura Sync:</strong> synchronizované světelné efekty - i v bezdrátovém režimu.</li>
+                    <li><strong>Ergonomický design:</strong> odnímatelná magnetická opěrka zápěstí pro pohodlné hraní při dlouhých herních maratonech.</li>
                 </ul>
-            </div>
-            <div class="col-md-6">
-                <ul>
-                    <li><strong>Intuitivní ovládání:</strong> Čtyři plně přizpůsobitelné rychlé klávesy a ovladač hlasitosti.</li>
-                    <li><strong>Bezdrátová funkce Aura Sync:</strong> Synchronizované světelné efekty v bezdrátovém režimu.</li>
-                    <li><strong>Ergonomický design:</strong> Magnetická opěrka zápěstí pro dlouhé herní maratony.</li>
-                </ul>
-            </div>
-        </div>
-
-        <h2 class="text-center mt-5">Image Gallery</h2>
-        <div id="lightgallery" class="d-flex flex-wrap justify-content-center">
-            <div class="p-2" data-src="imgs/clay1.png">
-                <a href="imgs/clay1.png">
-                    <img src="imgs/clay1.png" alt="Gallery Image 1" class="img-fluid rounded" style="max-width: 150px;">
-                </a>
-            </div>
-            <div class="p-2" data-src="imgs/clay2.png">
-                <a href="imgs/clay2.png">
-                    <img src="imgs/clay2.png" alt="Gallery Image 2" class="img-fluid rounded" style="max-width: 150px;">
-                </a>
-            </div>
-            <div class="p-2" data-src="imgs/clay3.png">
-                <a href="imgs/clay3.png">
-                    <img src="imgs/clay3.png" alt="Gallery Image 3" class="img-fluid rounded" style="max-width: 150px;">
-                </a>
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/lightgallery.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/plugins/thumbnail/lg-thumbnail.umd.min.js"></script>
