--- a/html/produkt.html
+++ b/html/produkt.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eshop</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css" href="css/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lightgallery.min.css" rel="stylesheet">
   </head>
   <body>
-    <script src="js/java2.js"></script>
+    <script src="../js/java2.js"></script>
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(241, 241, 241);">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="imgs/asus.svg" alt="" style="height: 20px;">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../imgs/asus.svg" alt="" style="height: 20px;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
               </li>
               <li class="nav-item dropdown-custom">
                 <a class="navbar-brand dropdown-toggle-custom" href="#" id="shoppingCartDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img class="cart" src="imgs/cart.svg" alt="" height="30" width="30">
+                  <img class="cart" src="../imgs/cart.svg" alt="" height="30" width="30">
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shoppingCartDropdown">
                   <!-- Product Template 1 -->
@@ -53,7 +53,7 @@
                       <h6 class="mb-0">TUF Gaming K3 Gen II</h6>
                       <small class="text-muted">€100,00</small>
                     </div>
-                    <img src="imgs/img13.webp" alt="Product 1" class="img-thumbnail" style="width: 50px; height: 50px;">
+                    <img src="../imgs/img13.webp" alt="Product 1" class="img-thumbnail" style="width: 50px; height: 50px;">
                   </li>
                   <li><hr class="dropdown-divider"></li>
                   <!-- Product Template 2 -->
@@ -62,12 +62,12 @@
                       <h6 class="mb-0">ROG Azoth Extreme</h6>
                       <small class="text-muted">€400,00</small>
                     </div>
-                    <img src="imgs/img1.webp" alt="Product 2" class="img-thumbnail" style="width: 50px; height: 50px;">
+                    <img src="../imgs/img1.webp" alt="Product 2" class="img-thumbnail" style="width: 50px; height: 50px;">
                   </li>
                   <li><hr class="dropdown-divider"></li>
                   <!-- Checkout Button -->
                   <li class="dropdown-item text-center">
-                    <button class="btn btn-primary btn-sm w-100">Zaplatit</button>
+                    <a href="kosik.html" class="btn btn-primary btn-sm w-100">Zaplatit</a>
                   </li>
                 </ul>
               </li>
@@ -78,25 +78,25 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-7 text-center">
-                <img src="imgs/claymain.png" alt="ROG Claymore II" class="main-thumbnail">
+                <img src="../imgs/claymain.png" alt="ROG Claymore II" class="main-thumbnail">
                 <div id="lightgallery" class="gallery-thumbnails">
-                    <a href="imgs/clay1.png" data-src="imgs/clay1.png">
-                        <img src="imgs/clay1.png" alt="Gallery Image 1">
+                    <a href="../imgs/clay1.png" data-src="../imgs/clay1.png">
+                        <img src="../imgs/clay1.png" alt="Gallery Image 1">
                     </a>
-                    <a href="imgs/clay2.png" data-src="imgs/clay2.png">
-                        <img src="imgs/clay2.png" alt="Gallery Image 2">
+                    <a href="../imgs/clay2.png" data-src="../imgs/clay2.png">
+                        <img src="../imgs/clay2.png" alt="Gallery Image 2">
                     </a>
-                    <a href="imgs/clay3.png" data-src="imgs/clay3.png">
-                        <img src="imgs/clay3.png" alt="Gallery Image 3">
+                    <a href="../imgs/clay3.png" data-src="../imgs/clay3.png">
+                        <img src="../imgs/clay3.png" alt="Gallery Image 3">
                     </a>
-                    <a href="imgs/clay4.png" data-src="imgs/clay4.png">
-                        <img src="imgs/clay4.png" alt="Gallery Image 4">
+                    <a href="../imgs/clay4.png" data-src="../imgs/clay4.png">
+                        <img src="../imgs/clay4.png" alt="Gallery Image 4">
                     </a>
-                    <a href="imgs/clay5.png" data-src="imgs/clay5.png">
-                        <img src="imgs/clay5.png" alt="Gallery Image 5">
+                    <a href="../imgs/clay5.png" data-src="../imgs/clay5.png">
+                        <img src="../imgs/clay5.png" alt="Gallery Image 5">
                     </a>
-                    <a href="imgs/clay6.png" data-src="imgs/clay6.png">
-                        <img src="imgs/clay6.png" alt="Gallery Image 6">
+                    <a href="../imgs/clay6.png" data-src="../imgs/clay6.png">
+                        <img src="../imgs/clay6.png" alt="Gallery Image 6">
                     </a>
                 </div>
             </div>
