kosik, doprava, udaje+obrazky

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                   <div class="color-black"></div>
                 </div>
                 <p>Herní klávesnice ROG Azoth Extreme 75 % z hliníkové slitiny, polohovací deskou z uhlíkových vláken, nastavitelným těsněním, plnobarevným dotykovým OLED displejem s třísměrným ovládacím knoflíkem, rozšířenou opěrkou zápěstí, magnetickými nožičkami, třemi režimy připojení.</p>
+                <p class="fw-bold fs-4">13 990 Kč</p>
                 <a class="btn odkaz btn-primary" href="html/produkt.html" role="button">Přejít na produkt</a>
               </div>
             </div>
@@ -340,6 +341,7 @@
                   <div class="color-black"></div>
                 </div>
                 <p>Modulární herní mechanická klávesnice ROG Claymore II TKL 80%/100% s optickými mechanickými spínači ROG RX, odnímatelnou numerickou klávesnicí a opěrkou zápěstí, drátovým a bezdrátovým režimem 2.4G, extra programovatelnými klávesami.</p>
+                <p class="fw-bold fs-4">4455 Kč</p>
                 <a class="btn odkaz btn-primary" href="html/produkt.html" role="button">Přejít na produkt</a>
               </div>
             </div>
