--- a/html/kosik.html
+++ b/html/kosik.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eshop</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="stylesheet" type="text/css" href="../css/styles2.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/css/lightgallery.min.css" rel="stylesheet">
   </head>
   <body>
-    <script src="../js/java2.js"></script>
+    <script src="../js/java3.js"></script>
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(241, 241, 241);">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
@@ -75,6 +75,131 @@
         </div>
       </div>
     </nav>
+    <div class="container mt-5">
+      <div class="d-flex justify-content-between align-items-center mb-4">
+          <a href="kosik.html" class="text-center text-decoration-none text-dark progress-step">
+              <div class="badge bg-primary rounded-circle text-white">1</div>
+              <p class="mb-0">Obsah košíku</p>
+          </a>
+          <hr class="cara">
+          <a href="doprava.html" class="text-center text-decoration-none text-dark progress-step">
+              <div class="badge bg-secondary rounded-circle">2</div>
+              <p class="mb-0">Doprava a platba</p>
+          </a>
+          <hr class="cara">
+          <a href="udaje.html" class="text-center text-decoration-none text-dark progress-step">
+              <div class="badge bg-secondary rounded-circle">3</div>
+              <p class="mb-0">Dodací údaje</p>
+          </a>
+          <hr class="cara">
+          <a href="#" class="text-center text-decoration-none text-dark progress-step">
+              <div class="badge bg-secondary rounded-circle">4</div>
+              <p class="mb-0">Souhrn nákupu</p>
+          </a>
+      </div>
+
+      <!-- Shopping Cart -->
+      <h4>Obsah tvého košíku</h4>
+      <div class="card mb-4">
+          <div class="card-body">
+              <div class="row align-items-center">
+                  <div class="col-md-2">
+                      <img src="../imgs/img1.webp" alt="Product Image" class="img-fluid">
+                  </div>
+                  <div class="col-md-6">
+                      <h6>ROG Azoth Extreme</h6>
+                      <p class="text-success">Skladem celkem &gt; 3 ks</p>
+                      <p>U vás nejdříve: 24.1. (pátek)</p>
+                  </div>
+                  <div class="col-md-2 text-center">
+                    <div class="input-group">
+                        <button class="btn btn-outline-primary btn-minus">-</button>
+                        <input type="text" class="form-control text-center quantity-input" value="1" style="max-width: 50px;">
+                        <button class="btn btn-outline-primary btn-plus">+</button>
+                    </div>
+                </div>
+                  <div class="col-md-2 text-end">
+                      <p class="fw-bold mb-0">13 990 Kč</p>
+                      <p class="text-muted">12 682 Kč bez DPH</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="card mb-4">
+        <div class="card-body">
+            <div class="row align-items-center">
+                <div class="col-md-2">
+                    <img src="../imgs/img11.webp" alt="Product Image" class="img-fluid">
+                </div>
+                <div class="col-md-6">
+                    <h6>ROG Claymore II</h6>
+                    <p class="text-success">Skladem celkem &gt; 2 ks</p>
+                    <p>U vás nejdříve: 24.1. (pátek)</p>
+                </div>
+                <div class="col-md-2 text-center">
+                  <div class="input-group">
+                      <button class="btn btn-outline-primary btn-minus">-</button>
+                      <input type="text" class="form-control text-center quantity-input" value="1" style="max-width: 50px;">
+                      <button class="btn btn-outline-primary btn-plus">+</button>
+                  </div>
+              </div>
+                <div class="col-md-2 text-end">
+                    <p class="fw-bold mb-0">4 455 Kč</p>
+                    <p class="text-muted">3956 Kč bez DPH</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-4">
+      <div class="card-body">
+          <div class="row align-items-center">
+              <div class="col-md-2">
+                  <img src="../imgs/img3.webp" alt="Product Image" class="img-fluid">
+              </div>
+              <div class="col-md-6">
+                  <h6>ROG Strix Scope II</h6>
+                  <p class="text-success">Skladem celkem &gt; 2 ks</p>
+                  <p>U vás nejdříve: 24.1. (pátek)</p>
+              </div>
+              <div class="col-md-2 text-center">
+                <div class="input-group">
+                    <button class="btn btn-outline-primary btn-minus">-</button>
+                    <input type="text" class="form-control text-center quantity-input" value="1" style="max-width: 50px;">
+                    <button class="btn btn-outline-primary btn-plus">+</button>
+                </div>
+            </div>
+              <div class="col-md-2 text-end">
+                  <p class="fw-bold mb-0">4 035 Kč</p>
+                  <p class="text-muted">3 732 Kč bez DPH</p>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+      <!-- Discount Code and Total Price -->
+      <div class="d-flex justify-content-between align-items-center mb-4">
+          <div class=" flex-wrap d-flex align-items-center">
+              <h6 class="mb-0 me-3">Dárkový / slevový kód:</h6>
+              <div class="input-group" style="max-width: 300px;">
+                  <input type="text" class="form-control" placeholder="Zadejte kód">
+                  <button class="btn btn-primary">Ověřit</button>
+              </div>
+          </div>
+          <div class="text-end">
+              <h5 class="mb-0">Cena celkem: <span class="fw-bold">22 480 Kč</span></h5>
+              <p class="text-muted">20 370 Kč bez DPH</p>
+          </div>
+      </div>
+
+      <!-- Actions -->
+      <div class="konec d-flex justify-content-between align-items-center">
+          <button class="btn btn-outline-primary">Zpět do obchodu</button>
+          <button class="btn btn-primary">Pokračovat</button>
+      </div>
+  </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/lightgallery.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.7.1/plugins/thumbnail/lg-thumbnail.umd.min.js"></script>
