souhrn, upravy kosik,doprava,udaje+obrazky

--- a/html/doprava.html
+++ b/html/doprava.html
@@ -36,7 +36,7 @@
               <p class="mb-0">Dodací údaje</p>
           </a>
           <hr class="cara">
-          <a href="#" class="text-center text-decoration-none text-dark progress-step">
+          <a href="souhrn.html" class="text-center text-decoration-none text-dark progress-step">
               <div class="badge bg-secondary rounded-circle">4</div>
               <p class="mb-0">Souhrn nákupu</p>
           </a>
@@ -108,7 +108,7 @@
     <div class="form-check d-flex align-items-center">
         <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option10">
         <img src="../imgs/krypto.png" alt="" class="icon me-2"></img>
-        <label class="form-check-label d-flex justify-content-between w-100" for="option10">
+        <label class="form-check-label d-flex justify-content-between w-100" for="option10"> 
             <span>Kryptoměnou</span>
             <span class="text-success">---</span>
         </label>
