--- a/html/kosik.html
+++ b/html/kosik.html
@@ -92,7 +92,7 @@
               <p class="mb-0">Dodací údaje</p>
           </a>
           <hr class="cara">
-          <a href="#" class="text-center text-decoration-none text-dark progress-step">
+          <a href="souhrn.html" class="text-center text-decoration-none text-dark progress-step">
               <div class="badge bg-secondary rounded-circle">4</div>
               <p class="mb-0">Souhrn nákupu</p>
           </a>
@@ -194,8 +194,8 @@
 
       <!-- Actions -->
       <div class="konec d-flex justify-content-between align-items-center">
-          <button class="btn btn-outline-primary">Zpět do obchodu</button>
-          <button class="btn btn-primary">Pokračovat</button>
+          <a href="../index.html" class="btn btn-outline-primary">Zpět do obchodu</a>
+          <a href="doprava.html" class="btn btn-primary">Pokračovat</a>
       </div>
   </div>
 
