--- a/html/udaje.html
+++ b/html/udaje.html
@@ -30,12 +30,12 @@
               <p class="mb-0">Doprava a platba</p>
           </a>
           <hr class="cara">
-          <a href="#" class="text-center text-decoration-none text-dark progress-step">
+          <a href="udaje.html" class="text-center text-decoration-none text-dark progress-step">
               <div class="badge bg-primary rounded-circle">3</div>
               <p class="mb-0">Dodací údaje</p>
           </a>
           <hr class="cara">
-          <a href="#" class="text-center text-decoration-none text-dark progress-step">
+          <a href="souhrn.html" class="text-center text-decoration-none text-dark progress-step">
               <div class="badge bg-secondary rounded-circle">4</div>
               <p class="mb-0">Souhrn nákupu</p>
           </a>
@@ -155,7 +155,7 @@
         </div>
         <div class="konec d-flex justify-content-between align-items-center">
             <a href="../index.html" class="btn btn-outline-primary">Zpět do obchodu</a>
-            <a href="" class="btn btn-primary">Pokračovat</a>
+            <a href="souhrn.html" class="btn btn-primary">Pokračovat</a>
         </div>
     </div>
   </body>
