--- a/html/souhrn.html
+++ b/html/souhrn.html
@@ -159,8 +159,8 @@
             </div>
         </div>
         <div class="konec d-flex justify-content-between align-items-center mt-4">
-            <button class="btn btn-outline-secondary">Zpět na dodací údaje</button>
-            <button class="btn btn-success">Dokončit objednávku</button>
+            <a href="udaje.html" class="btn btn-outline-secondary">Zpět na dodací údaje</a>
+            <a href="#" class="btn btn-success">Dokončit objednávku</a>
         </div>
     </div>
   </body>
