--- a/html/doprava.html
+++ b/html/doprava.html
@@ -46,7 +46,7 @@
         <form>
       <div class="form-check d-flex align-items-center">
           <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option3">
-          <img src="../imgs/cesko.png" alt="" class="icon me-2"></img>
+          <img src="../imgs/cesko.png" alt="" class="icon me-2">
           <label class="form-check-label d-flex justify-content-between w-100" for="option3">
               <span>Osobní odběr: 9236+ míst v ČR</span>
               <span class="text-success">ZDARMA</span>
@@ -54,7 +54,7 @@
       </div>
       <div class="form-check d-flex align-items-center">
           <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option4">
-          <img src="../imgs/gls.png" alt="" class="icon me-2"></img>
+          <img src="../imgs/gls.png" alt="" class="icon me-2">
           <label class="form-check-label d-flex justify-content-between w-100" for="option4">
               <span>Přepravní služba: GLS</span>
               <span class="text-success">ZDARMA</span>
@@ -62,7 +62,7 @@
       </div>
       <div class="form-check d-flex align-items-center">
           <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option5">
-          <img src="../imgs/zasilkovna.png" alt="" class="icon me-2"></img>
+          <img src="../imgs/zasilkovna.png" alt="" class="icon me-2">
           <label class="form-check-label d-flex justify-content-between w-100" for="option5">
               <span>Zásilkovna domů</span>
               <span class="text-success">ZDARMA</span>
@@ -70,20 +70,21 @@
       </div>
       <div class="form-check d-flex align-items-center">
           <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option6">
-          <img src="../imgs/dpd.png" alt="" class="icon me-2"></img>
+          <img src="../imgs/dpd.png" alt="" class="icon me-2">
           <label class="form-check-label d-flex justify-content-between w-100" for="option6">
               <span>Přepravní služba: DPD</span>
               <span class="text-success">ZDARMA</span>
           </label>
       </div>
         </form>
+      </div>
     </div>
     <div class="container mt-5">
       <h3 class="mb-4">Způsob platby</h3>
       <form class="dopr">
     <div class="form-check d-flex align-items-center">
         <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option7">
-        <img src="../imgs/visa.png" alt="" class="icon me-2"></img>
+        <img src="../imgs/visa.png" alt="" class="icon me-2">
         <label class="form-check-label d-flex justify-content-between w-100" for="option7">
             <span>Platební karta</span>
             <span class="text-dark">---</span>
@@ -91,7 +92,7 @@
     </div>
     <div class="form-check d-flex align-items-center">
         <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option8">
-        <img src="../imgs/apple.png" alt="" class="icon me-2"></img>
+        <img src="../imgs/apple.png" alt="" class="icon me-2">
         <label class="form-check-label d-flex justify-content-between w-100" for="option8">
             <span>Apple Pay</span>
             <span class="text-success">---</span>
@@ -99,7 +100,7 @@
     </div>
     <div class="form-check d-flex align-items-center">
         <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option9">
-        <img src="../imgs/google.png" alt="" class="icon me-2"></img>
+        <img src="../imgs/google.png" alt="" class="icon me-2">
         <label class="form-check-label d-flex justify-content-between w-100" for="option9">
             <span>Google Pay</span>
             <span class="text-success">---</span>
@@ -107,7 +108,7 @@
     </div>
     <div class="form-check d-flex align-items-center">
         <input class="form-check-input me-2" type="radio" name="deliveryOption" id="option10">
-        <img src="../imgs/krypto.png" alt="" class="icon me-2"></img>
+        <img src="../imgs/krypto.png" alt="" class="icon me-2">
         <label class="form-check-label d-flex justify-content-between w-100" for="option10"> 
             <span>Kryptoměnou</span>
             <span class="text-success">---</span>
