--- a/html/udaje.html
+++ b/html/udaje.html
@@ -157,6 +157,7 @@
             <a href="../index.html" class="btn btn-outline-primary">Zpět do obchodu</a>
             <a href="souhrn.html" class="btn btn-primary">Pokračovat</a>
         </div>
+        </div>
     </div>
   </body>
 </html>
