--- a/html/souhrn.html
+++ b/html/souhrn.html
@@ -64,7 +64,6 @@
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title"></h5>
                 <div class="row align-items-center">
                     <div class="col-md-2">
                         <img src="../imgs/img11.webp" alt="Product Image" class="img-fluid">
@@ -85,7 +84,6 @@
         </div>
         <div class="card mb-4">
             <div class="card-body">
-                <h5 class="card-title"></h5>
                 <div class="row align-items-center">
                     <div class="col-md-2">
                         <img src="../imgs/img3.webp" alt="Product Image" class="img-fluid">
@@ -104,7 +102,6 @@
                 </div>
             </div>
         </div>
-
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Doprava a platba</h5>
@@ -130,7 +127,6 @@
                 </ul>
             </div>
         </div>
-
         <div class="card mb-4">
             <div class="card-body">
                 <h5 class="card-title">Dodací údaje</h5>
@@ -162,6 +158,7 @@
             <a href="udaje.html" class="btn btn-outline-secondary">Zpět na dodací údaje</a>
             <a href="#" class="btn btn-success">Dokončit objednávku</a>
         </div>
+      </div>
     </div>
   </body>
 </html>
